# kargo

./: .gitignore  ACTION_ITEMS.md  CLAUDE.md  Cargo.toml  TODO.md  justfile
custom/path/test/: README.md  enum_op.md  enums.md  functions.md  module_semver.md  modules.md  semver.json  struct_buildmetadata.md  struct_comparator.md  struct_error.md  struct_prerelease.md  struct_version.md  struct_versionreq.md  structs.md
docs/: rustdoc-types-0.46-migration.md  rustdoc-types-api-changes.md  unwrap-cleanup-map.md
docs/surrealdb/: README.md  enum_action.md  enum_error.md  enum_experimentalfeature.md  enum_exportdestination.md  enum_resource.md  enum_responseaction.md  enum_tls.md  enum_waitfor.md  enums.md  functions.md  module_any.md  module_auth.md  module_capabilities.md  module_config.md  module_endpoint.md  module_engine.md  module_error.md  module_export.md  module_method.md  module_opt.md  module_proto.md  module_query.md  module_remote.md  module_resource.md  module_surrealdb.md  module_tls.md  module_value.md  module_ws.md  modules.md  struct_any.md  struct_authenticate.md  struct_backup.md  struct_begin.md  struct_bytes.md  struct_cancel.md  struct_capabilities.md  struct_client.md  struct_commit.md  struct_config.md  (+74 more)
docs/tokio/: README.md  functions.md  module_io.md  module_net.md  module_stream.md  module_task.md  module_tokio.md  modules.md  struct_internal.md  struct_readbuf.md  structs.md  tokio.json  trait_asyncbufread.md  trait_asyncread.md  trait_asyncseek.md  trait_asyncwrite.md  trait_tosocketaddrs.md  traits.md
kargo-cli/: Cargo.toml  README.md   TODO.md
kargo-cli/rust_docs/: surrealdb.md  tokio.md
kargo-cli/src/: backup.rs  cli.rs  commands.rs  config.rs  events.rs  lib.rs  main.rs  project.rs  rustscript.rs  test_clap.rs  vendor.rs
kargo-cli/src/plugins/: host_functions.rs  manager.rs  mod.rs  trait_scanner.rs  wasm_adapter.rs
kargo-cli/src/plugins/host/: functions.rs  functions_poll.rs  mod.rs  tasks.rs  types.rs
kargo-cli/tests/: test_command_deserialization.rs
kargo-kurate/: Cargo.toml
kargo-kurate/src/: executor.rs  mod.rs  processor.rs
kargo-mddoc/: .gitignore  Cargo.toml  README.md
kargo-mddoc/src/: lib.rs  plugin.rs
kargo-mddoc/src/kargo/: config.rs  error.rs  generator.rs  markdown.rs  mod.rs  package.rs  toolchain.rs  utils.rs
kargo-mddoc/src/kargo/clap/: mod.rs
kargo-mddoc/src/kargo/clap/md/: mod.rs
kargo-mddoc/src/kargo/rust2md/: markdown.rs  mod.rs  types.rs
kargo-mddoc/test/: test_doc_generation.rs  test_documentation_generator.rs  test_integration.rs
kargo-mddoc/tests/: package_spec_tests.rs
kargo-plugin-api/: Cargo.toml
kargo-plugin-api/src/: lib.rs
kargo-plugin-builder/src/: error.rs  lib.rs
kargo-plugin-macros/: Cargo.toml
kargo-plugin-macros/src/: lib.rs
kargo-plugin/kargo-plugin-api/src/: lib.rs
kargo-plugin/kargo-plugin-builder/: Cargo.toml
kargo-plugin/kargo-plugin-builder/src/: error.rs  lib.rs
kargo-plugin/kargo-plugin-macros/src/: lib.rs
kargo-plugin/kargo-plugin-native/: Cargo.toml
kargo-plugin/kargo-plugin-native/src/: lib.rs
kargo-plugin/kargo-plugin-wasm/: Cargo.toml
kargo-plugin/kargo-plugin-wasm/bindings/: python.py  typescript.ts
kargo-plugin/kargo-plugin-wasm/src/: lib.rs
kargo-upgrade/: Cargo.toml
kargo-upgrade/src/: crates_io.rs  finder.rs  lib.rs  models.rs  types.rs  updater.rs  updaters.rs
kargo-upgrade/src/parsers/: cargo_parser.rs  mod.rs  rust_script_parser.rs
kargo-upgrade/src/writers/: cargo_writer.rs  mod.rs  rust_script_writer.rs
kargo-upgrade/test/: test_dependency_parser.rs  test_dependency_updater.rs  test_dependency_writer.rs
kargo-upgrade/tests/: rust_script_parser_tests.rs
kargo-walk/: Cargo.toml
kargo-walk/src/: main.rs
kargo-workspace/: Cargo.toml  HIKARI.md
plugins/native/kargo-kurate/: Cargo.toml
plugins/native/kargo-kurate/src/: executor.rs  processor.rs
plugins/native/kargo-mddoc/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
plugins/native/kargo-mddoc/src/: lib.rs  plugin.rs
plugins/native/kargo-mddoc/src/kargo/: config.rs  error.rs  generator.rs  markdown.rs  mod.rs  multipage_markdown.rs  package.rs  toolchain.rs  utils.rs
plugins/native/kargo-mddoc/src/kargo/clap/: mod.rs
plugins/native/kargo-mddoc/src/kargo/clap/md/: mod.rs
plugins/native/kargo-mddoc/src/kargo/rust2md/: markdown.rs  mod.rs  types.rs
plugins/native/kargo-mddoc/tests/: package_spec_tests.rs
plugins/native/kargo-mdlint/: Cargo.toml
plugins/native/kargo-mdlint/src/: lib.rs  plugin.rs
plugins/native/kargo-sap/: Cargo.toml
plugins/native/kargo-sap/src/: lib.rs
plugins/native/kargo-upgrade/: Cargo.toml  TODOLIST.md
plugins/native/kargo-upgrade/src/: finder.rs  lib.rs  models.rs  types.rs  updater.rs  updaters.rs
plugins/native/kargo-upgrade/src/parsers/: cargo_parser.rs  mod.rs  rust_script_parser.rs
plugins/native/kargo-upgrade/src/writers/: cargo_writer.rs  mod.rs  rust_script_writer.rs
plugins/native/kargo-upgrade/tests/: rust_script_parser_tests.rs
plugins/native/kargo-walk/: Cargo.toml
plugins/native/kargo-walk/src/: main.rs
plugins/templates/kargo-plugin-native/: .gitignore  Cargo.toml  README.md  cargo-generate.toml
plugins/templates/kargo-plugin-native/src/: lib.rs
plugins/templates/kargo-plugin-template-go/: Makefile  README.md  cargo-generate.toml  go.mod  main.go
plugins/templates/kargo-plugin-template-node/: README.md  cargo-generate.toml  index.js  package.json
plugins/templates/kargo-plugin-template-python/: README.md  build.py  cargo-generate.toml  requirements.txt  {{plugin_name}}.py
plugins/templates/kargo-plugin-template-typescript/: cargo-generate.toml  package.json
plugins/templates/kargo-plugin-template-typescript/src/: index.ts
plugins/templates/kargo-plugin-template-wasm/: Cargo.toml  README.md  cargo-generate.toml
plugins/templates/kargo-plugin-template-wasm/src/: lib.rs
