[workspace]
resolver = "2"
members = [
    "kargo-cli",
    "kargo-plugin/kargo-plugin-api",
    "kargo-plugin/kargo-plugin-builder",
    "kargo-plugin/kargo-plugin-macros",
    "kargo-plugin/kargo-plugin-native",
    "kargo-plugin/kargo-plugin-wasm",
    "plugins/native/kargo-kurate",
    "plugins/native/kargo-mddoc",
    "plugins/native/kargo-mdlint",
    "plugins/native/kargo-sap",
    "plugins/native/kargo-upgrade",
    "plugins/native/kargo-walk"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kargo Contributors"]

[workspace.dependencies]

kargo-plugin-api = { path = "./kargo-plugin/kargo-plugin-api" }
kargo-plugin-native = { path = "./kargo-plugin/kargo-plugin-native" }
kargo-plugin-wasm = { path = "./kargo-plugin/kargo-plugin-wasm" }
kargo-plugin-macros = { path = "./kargo-plugin/kargo-plugin-macros" }
kargo-plugin-builder = { path = "./kargo-plugin/kargo-plugin-builder" }

anyhow = "1"
clap = { version = "4.5.40", features = ["derive", "string"] }
tokio = { version = "1.45", features = ["full"] }
libloading = "0.8"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
log = "0.4"
env_logger = "0.11"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
regex = "1"
gag = "1.0"
jwalk = "0.8"
rayon = "1"
toml_edit = "0.22"
futures = "0.3"
cargo_metadata = "0.20"
tempfile = "3"
directories = "6"
serde_yaml = "0.9"
which = "8.0.0"
assert_fs = "1.1.3"
predicates = "3.1.3"
serde_yaml_ok = "0.9.36"
indicatif = "0.17.11"
tokio-stream = { version = "0.1.17", features = ["sync"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.20", features = ["json", "stream", "blocking"] }
cargo-manifest = "0.19.1"
rustdoc-types = "0.46.1"
thiserror = "2.0.12"
eyre = "0.6.12"
semver = "1.0.26"
fs_extra = "1.3.0"
lazy_static = "1.5.0"
extism = { version = "1.11.1"}
clap_complete = "4.5.50"
globset = "0.4.16"
