[package]
name = "kargo-mddoc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A tool to generate, format and present well-formed markdown from rustdoc."
keywords = ["documentation", "rustdoc", "markdown", "api", "docs"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17.11"
rustdoc-types = "0.41"

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"
eyre = "0.6"

# Utilities
tempfile = "3.20"
semver = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra = "1.3"
dirs = "6.0.0"

# Logging
log = "0.4"
env_logger = "0.11.8"

[lib]
name = "kargo_mddoc"
path = "src/lib.rs"
