[package]
name = "kargo-walk"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kargo-walk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
rayon = "1.10.0"
jwalk = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ok = "0.9.36"
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
indicatif = "0.17.11"
tempfile = "3.20.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml_edit = "0.22.27"
futures = "0.3.31"
directories = "6.0.0"
cargo_metadata = "0.20.0"
regex = "1.11.1"
clap = { version = "4.5.40", features = ["derive", "cargo"] }
once_cell = "1.21.3"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
reqwest = { version = "0.12.20", features = ["json", "stream", "blocking"] }
cargo-manifest = "0.19.1"
cargo_toml = "0.22.1"

[dev-dependencies]
assert_fs = "1.1.3"
predicates = "3.1.3"
