[package]
name = "kargo-{{plugin_name}}-wasm"
version = "0.1.0"
edition = "2021"
authors = ["{{author_name}} <{{author_email}}>"]
description = "{{plugin_description}}"

[lib]
crate-type = ["cdylib"]

[dependencies]
kargo-plugin-wasm = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true